  - some fixes to the skeleton GUI and demo script
  - prevent internal function indent() from losing it over negative values
  - indentation of rk.paste.JS.graph() was incorrect
  - pasting comments via rk.paste.JS() gained an extra space for subsequent
    lines
  - the "i18n" attribute in lists e.g. for rk.XML.radio() didn't really work
  - improved indetation for rk.JS.oset objects
added:
  - new methods plugin2script() to try to translate raw plugin XML into
    working rkwarddev script calls
  - new option "ignore" enables rk.uniqueIDs() to not check nodes for
    duplicates (e.g., <copy>)
  - new wrapper function js() for id() makes it possible to use several
    operators without quoting, preserve "if" conditions and "for" loops, which all
    will be translated to JavaScript equivalents without the need for quoting.
    however, the "for" loop code is not publicly documented and remains a
    proof of concept kind of thing for now
  - new option ".objects" in id() and ".ite" in rk.JS.options() to provide
    objects as a list
  - new option "rk.JS.vars" to make JS variables match the name of the
    original R object
  - new function idq() to print quoted IDs of XML nodes for use in JavaScript
    sections
  - new function modifiers() to make checking for valid mdifiers of a given
    node easier
  - new functions rk.get.indent() and rk.set.indent() to globally set
    indentation string
  - new functions rk.get.empty.e() and rk.set.empty.e() to globally define
    the handling of empty "else" clauses in JavaScript
  - in rk.JS.header(), the second value provided by "add" can now be named
    "noquote" to have it nested in the JS noquote() function
  - new wrapper function rk.updatePluginMessages() for
    update_plugin_messages.py, the package now comes with its own copy of this core i18n script
  - the generator info gained support for hinting at the very rkwarddev
    script file that was used to generate a particular plugin file